--- a/spacematters.bib
+++ b/spacematters.bib
@@ -70,6 +70,18 @@
   publisher={University of michigan Press}
 }
 
+
+@article{raimbault2018calibration,
+  title={Calibration of a density-based model of urban morphogenesis},
+  author={Raimbault, Juste},
+  journal={PloS one},
+  volume={13},
+  number={9},
+  pages={e0203516},
+  year={2018},
+  publisher={Public Library of Science}
+}
+
 @ARTICLE{2017arXiv170806743R,
    author = {{Raimbault}, J.},
     title = {Calibration of a Density-based Model of Urban Morphogenesis},
@@ -127,8 +139,6 @@
 	title = {Aligning simulation models: a Case study and results},
 	volume = {1},
     number ={2},
-	url = {https://link.springer.com/article/10.1007%2FBF01299065?LI=true},
-	urldate = {2017-07-06},
 	journal = {Computational and Mathematical Organization Theory},
 	author = {Axtell, Robert and Axelrod, Robert and Epstein, Joshua M. and Cohen, Michael D.},
 	year = {1996},
@@ -420,7 +430,6 @@
 title = {The {Co}-evolution of {Residential} {Segregation} and the {Built} {Environment} at the {Turn} of the 20th {Century}: {A} {Schelling} {Model}},
 	volume = {18},
 	shorttitle = {The {Co}-evolution of {Residential} {Segregation} and the {Built} {Environment} at the {Turn} of the 20th {Century}},
-	url = {http://onlinelibrary.wiley.com/doi/10.1111/tgis.12014/full},
 	number = {1},
 	urldate = {2015-04-21},
 	journal = {Transactions in GIS},
@@ -448,14 +457,7 @@ journal = {Transport Reviews},
 volume = {0},
 number = {0},
 pages = {1-27},
-year = {2017},
-doi = {10.1080/01441647.2017.1295112},
-URL = { 
-        http://www.tandfonline.com/doi/abs/10.1080/01441647.2017.1295112
-	},
-eprint = { 
-        http://www.tandfonline.com/doi/pdf/10.1080/01441647.2017.1295112
-    }
+year = {2017}
 }
 
 @book{WeidlichHaag1988,
@@ -730,7 +732,6 @@ eprint = {
     year = {2017},
     month = {05},
     volume = {12},
-    url = {https://doi.org/10.1371/journal.pone.0178165},
     pages = {1-20},
     abstract = {Citizen science opens new pathways that can complement traditional scientific practice. Intuition and reasoning often make humans more effective than computer algorithms in various realms of problem solving. In particular, a simple visual comparison of spatial patterns is a task where humans are often considered to be more reliable than computer algorithms. However, in practice, science still largely depends on computer based solutions, which inevitably gives benefits such as speed and the possibility to automatize processes. However, the human vision can be harnessed to evaluate the reliability of algorithms which are tailored to quantify similarity in spatial patterns. We established a citizen science project to employ the human perception to rate similarity and dissimilarity between simulated spatial patterns of several scenarios of a hydrological catchment model. In total, the turnout counts more than 2500 volunteers that provided over 43000 classifications of 1095 individual subjects. We investigate the capability of a set of advanced statistical performance metrics to mimic the human perception to distinguish between similarity and dissimilarity. Results suggest that more complex metrics are not necessarily better at emulating the human perception, but clearly provide auxiliary information that is valuable for model diagnostics. The metrics clearly differ in their ability to unambiguously distinguish between similar and dissimilar patterns which is regarded a key feature of a reliable metric. The obtained dataset can provide an insightful benchmark to the community to test novel spatial metrics.},
     number = {5},
