--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -29,16 +29,16 @@
   \IfValueT{#1}{
       \textcolor{red}{\textbf{C (#1) : }#2}
       \IfValueT{#3}{\textcolor{blue}{\textbf{A1 : }#3}}
-      \IfValueT{#4}{\textcolor{ForestGreen}{\textbf{A2 : }#4}}
+      \IfValueT{#4}{\textcolor{green}{\textbf{A2 : }#4}}
       \IfValueT{#5}{\textcolor{red!50!blue}{\textbf{A3 : }#5}}
-      \IfValueT{#6}{\textcolor{Aquamarine}{\textbf{A4 : }#6}}
+      \IfValueT{#6}{\textcolor{blue}{\textbf{A4 : }#6}}
     }
     \IfNoValueT{#1}{
       \textcolor{red}{\textbf{C : }#2}
       \IfValueT{#3}{\textcolor{blue}{\textbf{A1 : }#3}}
-      \IfValueT{#4}{\textcolor{ForestGreen}{\textbf{A2 : }#4}}
+      \IfValueT{#4}{\textcolor{green}{\textbf{A2 : }#4}}
       \IfValueT{#5}{\textcolor{red!50!blue}{\textbf{A3 : }#5}}
-      \IfValueT{#6}{\textcolor{Aquamarine}{\textbf{A4 : }#6}}
+      \IfValueT{#6}{\textcolor{blue}{\textbf{A4 : }#6}}
     }
  }{}
 }
@@ -58,7 +58,7 @@ Juste Raimbault and co-authors%\\
 }
          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 
-%\makelettertitle
+\makelettertitle
 
 
 %Dear Editor,
@@ -104,12 +104,12 @@ Concerning specifically the comments made by the first referee:
     %We believe this is sufficient as the models have not been adjusted from these textbook cases implementations.
    
    % I believe it would be better to begin with an illustrative example on how two or three initial patterns influence the model results and then use the suggested method for a more extensive analysis
-   \item \comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..} \comment[CC]{peut-être en prenant des cas extrêmes sur Sugarscape?}[(JR) je regarde...]
+   \item Concerning basic illustration of the influence of initial patterns, we think that it is not possible with single runs to show a significant effect other than the direct effect of space on the localization of agents for example. It is indeed the point of our method that such tests must be done in a systematic way rather than ``eyeball validations''.
+   %\comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..}[(CC)peut-être en prenant des cas extrêmes sur Sugarscape?][(JR) je regarde... $\rightarrow$ bof, on voit rien a part que les agents se repartissent differement mais qui est une consequence directe d'ajouter l'espace, en en comparant les valeurs finales des ginis, ce qu'on fait plus bas plus rigoureusement. je suggère poliment que sa suggestion est idiote.]
 	
 	% 2. It is very important to describe the models. This is especially relevant for the Schelling model, which has many variants; each has different dependencies on the initial pattern. In my opinion, the NetLogo implementation is not the best choice because the model does not reach a state of segregation when agents are highly intolerant.
 	\item There was a misunderstanding for the Schelling implementation actually used, as we used our own implementation which pseudo-code has been added in Appendix of the paper and source code is openly available on the git repository of the project. This version implements the one used by (Gauvin et al., 2009), which also influenced us for the use of the term ``phase diagram''.% It does not reach a segregated state for high values of intolerance, but it does not cause a problem in our case as indicators can be computed on any model state (and actually reflect the fact that it is not segregated).
-	 \comment[CC]{le modèle ne produit pas de ségrégation quand les individus sont très intolérants? Comment ça? Bien sûr qu'il le fait (sous contrainte du taux de vacance).
-	  Cela dit y'a bien un point sur lequel l'implem Netlogo n'est pas bonne: c'est que la relocalisation des mécontents est random alors que dans le bouquin de Schelling, apparemment, c'était dans un voisinage proche.}[(JR) ah oui cest selon la vacance ; mais il y a des regimes ou ca converge jamais sous forme de cluster et ca reste un etat dynamique sans structure ; oui par contre on a du reprendre la random reloc, c'est ce que font les physiciens aussi]
+	 %\comment[CC]{le modèle ne produit pas de ségrégation quand les individus sont très intolérants? Comment ça? Bien sûr qu'il le fait (sous contrainte du taux de vacance). Cela dit y'a bien un point sur lequel l'implem Netlogo n'est pas bonne: c'est que la relocalisation des mécontents est random alors que dans le bouquin de Schelling, apparemment, c'était dans un voisinage proche.}[(JR) ah oui cest selon la vacance ; mais il y a des regimes ou ca converge jamais sous forme de cluster et ca reste un etat dynamique sans structure ; oui par contre on a du reprendre la random reloc, c'est ce que font les physiciens aussi]
 
     \item More generally concerning the choice of these two models, we aim at helping the readers to distance themselves from the case studies and focus on the genericity of the approach. This also explains why we have chosen Sugarscape as a second example: these two models are often used as toy models due to the simplicity of their mechanisms and therefore do not require a high level of expertise nor technicality to apprehend the impacts of the initial spatial conditions on the model outputs. This is again an argument in favour of our choice: space-dependent variations are to be expected even with the most simple sociospatial models.
 	
@@ -119,14 +119,16 @@ Concerning specifically the comments made by the first referee:
 	
 	% 4. Consider replacing “meta parameters” with something like “generator parameters” or “initial pattern parameters.”
 	%In order to clarify the concept of ``meta-parameter'' that we prefer to keep, we now propose a short definition after the first use of the term (section Methods): "In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process".
-    \item \comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
+	\item We agree that the term of meta-parameters may have been confusing, and following the suggestion we replaced it with ``generator parameters''.
+     \comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
     \comment[CC]{d'acc.}
-    \comment[MLT]{Du coup, dans nos échanges par mails on disait qu'on était ok pour changer, mais finalement cette solution vous convient? Je comprends pourquoi il/elle a tiqué sur le terme, mais c'est pas non plus hors de propos vu l'application qu'on en fait... bref, je suis partagée!}
+    \comment[MLT]{Du coup, dans nos échanges par mails on disait qu'on était ok pour changer, mais finalement cette solution vous convient? Je comprends pourquoi il/elle a tiqué sur le terme, mais c'est pas non plus hors de propos vu l'application qu'on en fait... bref, je suis partagée!}[(JR) moi ca me va de virer le meta]
 
 	
 	% 5. Line 228: Please explain why the median was chosen. Especially given that you use an L2 norm and variances in the index
 	\item \comment[JR]{je pensais qu'on prenait la moyenne ? je verifie... ligne 175 on écrit la médiane en effet}
 	\comment[CC]{ça doit être moi parce que je pensais qu'on prenait effectivement la médiane, qui est plus robuste aux extrêmes, mais si c'est la moyenne et que ça reste proche entre différentes réplications why not.}[(JR) il me semble que les distribs sont assez centrées et que ca revient quasiment au même ; par contre Clem si tu as pris median pour les stats et moi mean pour les plots c'est pas fou ; tu as encore le code des analyses stats ? (c'est sur le git ?)]
+	\comment[JR]{c'est la merde, on prend certaines fois la mediane et certaines fois la moyenne...}
 	
 	
 	% 6. Line 232: comparing phase diagrams is related to the topic of comparing patterns. It would make sense to mention the methods that are usually used to compare patterns
@@ -139,7 +141,7 @@ Concerning specifically the comments made by the first referee:
 	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
 	
 	\item In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty....), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most harmful one (e.g. the least realistic, although this is the case of most Schelling models).
-	\comment[CC]{Ref du papier de batty à ajouter (je ne l'ai pas trouvée}
+	\comment[CC]{Ref du papier de batty à ajouter (je ne l'ai pas trouvée}[(c'est le Batty, 2005)]
 	
 	
 	% 9. The authors should illustrate the contribution of each parameter of the generator to the generated initial pattern using a figure. Details of the generators should be included in an appendix
@@ -147,14 +149,14 @@ Concerning specifically the comments made by the first referee:
 	
 	% 10. Explain how the density grids are used in the Schelling model, do you allow more than one agent to be in the same cell? 
 	\item Yes, we allow more agents to be in the same cell. The potential density is defined by the density grid generated, and its population with the same number of agents in all grids. This distribution is the one at initialisation. If the potential density is not reached, more agents can move in the cell, otherwise it is deemed full and unavailable for further moves. The satisfaction and segregation indices are computed with regard to the people in the cell and the people present in neighbouring cells.
-	\comment[JR]{il a mal lu ou on est pas assez explicites, a detailler}
-	\comment[CC]{ça va comme réponse? }[(JR) parfait]
-	\comment[CC]{argumentaire à ajouter dans le papier}[(cc)done]
+	%\comment[JR]{il a mal lu ou on est pas assez explicites, a detailler}
+	%\comment[CC]{ça va comme réponse? }[(JR) parfait]
+	%\comment[CC]{argumentaire à ajouter dans le papier}[(cc)done]
 	
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
 	\item cf infra. 
 	\item density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
-\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
+%\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
 		
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
@@ -167,7 +169,7 @@ Concerning specifically the comments made by the first referee:
 	
 	% 14. Line 671: The same comment regarding “mythical ABMs” 
 	\item The term ``mythical'' line 671 was a language mistake and corrected, ``textbook'' ABM was meant.
-    \comment[MLT]{Use "textbook ABM instead?}[(JR) yes, better]
+    %\comment[MLT]{Use "textbook ABM instead?}[(JR) yes, better]
 \end{itemize}
 
 
@@ -182,8 +184,8 @@ Concerning the comments made by the second referee:
 \begin{itemize}
 	% In the abstract the authors claim that initial spatial conditions are often taken for granted. I do not agree to this statement. Initial spatial condition can have a large impact on the results of a model, however I do not think that the initial spatial conditions are often taken for granted.
 	\item We forcefully agree with the referee in that initial spatial conditions can have a large impact on the results of the model. Maybe not all papers take them for granted, but what we meant is that compared to other parameters, initial spatial conditions are much less often explored using sensitivity analysis. Actually, we know only a few papers which have explored the impact of initial spatial conditions as a systematic criterion in a sensitivity analysis of model results. We clarified this point in the introduction.
-    \comment[JR]{il s'agirait de nuancer ici}
-\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
+    %\comment[JR]{il s'agirait de nuancer ici}
+	%\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
 
 	% Page 2 line 88: the authors state that “Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density”, I do not think this is true. Many models generate a heterogeneous synthetic population that is based on local data (replicating the actual population as closely as possible) and in far more detail then what is done in this paper. I am thinking of work in the line of disease diffusion, crime etc.
 	\item \comment[JR]{il a un point car ce sont des classes de modèles qu'on a pas trop cité ? par contre la sensibilite a ces distribs precises n'est pas testée, ou pas systeématiquement : il faut qu'on clarifie ou reformule}
@@ -198,7 +200,7 @@ Concerning the comments made by the second referee:
 	
 	% In section 1.3 (Previous considerations on the effects of the spatial configuration in simulation models) authors provide a lot of evidence on previous work on the impact of initial spatial conditions on the output of models. This is contrary to the statement in the abstract that initial conditions are often taken for granted.
 	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. But first, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition. Second, the references cited mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but none provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
-    \comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
+    %\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
 	
 	% The most interesting part of the research to me, is not the way the density layers are generated but the use of the phase diagrams, defined as a vector of final aggregated model outputs. As these are vectors, they are not so different from time series and many techniques exist to compare vectors in this domain. I wonder if the Euclidean distance is the best measure to determine the difference between the phase vectors of different spatial inputs.
 	% -> 
@@ -216,8 +218,7 @@ Concerning the comments made by the second referee:
     \comment[JR]{Clem tu es d'accord là dessus ?}[(CC) Non mais il chipote complètement à ce niveau! Vu la figure pour moi c'est totalement équivalent dans un sens et dans l'autre, le tout c'était qu'il y'a une double descente chromatique et y'a même pas de densité = rouge ou quoi puisque c'est un rapport. Si tu veux lui faire plaisir on change mais je vois pas trop la nécessité.][(JR) bon je vais refaire la figure pour caresser dans le sens du poil - TODO]
 	
 	% I appreciate the fact that the authors in section 4 clearly indicate the limitations of their work (and I share the limitations listed under “comparing phase diagrams”). Personally I do not think that releasing the density grids is an important opportunity. As mentioned before I think that the core of the work is in the comparison of the phase vectors. I am not so sure the second opportunity listed in 4.2 is very valid. I do not think that the CEUS journal targets social sciences exactly.
-	Thanks for the remark. We have tried to shorten the considerations which you have found not too useful and will let the readers decide if the grids could be of any use to them.
-   
+	\item Thanks for the remarks on discussion, in particular on releasing density grids. We have tried to shorten the considerations which you have found not too useful and will let the readers decide if the grids could be of any use to them.
 \end{itemize}
 
 
@@ -234,7 +235,7 @@ Concerning the comments made by the third referee:
 	
 	% On a side note, one of your key words you use “validation” but in what sense?  You don’t really come back to this in the paper, also you write about “the validity of generative models is uncertain until their results are proven robust and representative of ’real-world’ conditions.” In the abstract but this is it.  What do you consider real world conditions to be? You seem to allude that you need to have the spatial generator to generate realistic (styles) city shapes for testing on the Schelling model but I am not convinced.  After the abstract all notion of validation is missing.
 	\item We have agreed with the reviewer and removed the concept of validation altogether, replacing it with model evaluation or sensitivity analysis.
-    \comment[JR]{enlever le concept de validation}
+    %\comment[JR]{enlever le concept de validation}
 	
 	% Geosimulation is introduced but not defined or referenced.  This should be clarified as the term has several meanings etc.
 	\item For the definition of geosimulation, we meant the one coined by (Benenson and Torrens, 2004), this was made explicit and the reference was added. 
@@ -244,24 +245,23 @@ Concerning the comments made by the third referee:
       \comment[CC]{ok pour cette phrase + derniere relecture a faire}
 	
 	% Page 4: you write “Generally, sensitivity analyses have focused either on the spatial context (extent of the environment, shape of the zones if applicable - squares, hexagons, etc., objects - links, rasters, etc.); either on the spatial encoding of the heterogeneity of space (algorithms of disaggregation, interpolation, etc.), but rarely on both at the same time” This makes little sense. What it should be is “Generally, sensitivity analyses have focused either on the spatial context or the heterogeneity of space” or something like that. Basically you need the “or”.
-	\item Thank you for the suggestion. We have modified the paragraph accordingly.
+	\item Thank you for the suggestion on page 4. We have modified the paragraph accordingly.
 
 
 	% You write “To our knowledge there exist no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature.” As this is new you may want to discuss how say its done in other fields?  
-	\item
+	\item 
     \comment[JR]{cf remarques other reviewers sur ce point}[(MLT) Sa remarque fait sens, mais j'avoue ne pas être trop au point sur cette partie de la littérature... vous avez des références?]
 	
 	% In the Schelling and sugarscape models how are the initial population of agents distributed? Is it random? I ask as this is unclear in the current version of the paper but it is vital if your purpose is to explore how the initial spatial configuration impacts the results of the model. Should the agents not be all located at the same location for each run to rule out the impact of initial placement of agents on the resulting patterns? This is something that is not addressed in the paper. I know for example, the Schelling model in NetLogo normally places the agents at random locations but in your reimplementation how is this done? The same goes for the sugarscape model in NetLogo. I believe a clearer description of the model initialization would be good and how its not the initial random placement of agents but the actual environment that impacts the outcomes. Maybe this was explained in the paper but I missed it.  
 	\item Yes, classically, the initial distribution of agents is random in both models and, most importantly for our point, it follows a uniform distribution of density. In our implementation, the initial location of agents is also random in Schelling, but it follows a distribution of density given by the generated grid. In Sugarscape, the agents are initialised at random but the resources follow a distribution of density given by the generated grid. We have clarified this point in section 2.3
-    \item
-    \comment[JR]{on regarde des indicateurs aggreges qui ne dependent pas de la trajectoire de chaque agent, si le placement initial est random il na aucune influence sur ceux-ci (cf les distribs) -> ajouter des graphes de comportement stat des modeles en Appendix ?}
-	       \comment[CC]{à modifier dans le papier section 2.3}[(cc) done]
+    %\comment[JR]{on regarde des indicateurs aggreges qui ne dependent pas de la trajectoire de chaque agent, si le placement initial est random il na aucune influence sur ceux-ci (cf les distribs) -> ajouter des graphes de comportement stat des modeles en Appendix ?}
+	%\comment[CC]{à modifier dans le papier section 2.3}[(cc) done]
            
 	% In Section 1.2 talk about “(monocentric vs. polycentric for example)” but in the results you don’t discuss the monocentric versions explicitly using these terms.
 	\item We believe that the monocentric versions are explicitly analysed in table 1: the term "monocentric" itself does not appear in the regression results but it is only because it is taken as the reference case under the term "compact' in the regression. We have clarified this in section 3.2.
-           \comment[CC]{à modifier dans le papier section 3.2}[(cc) done]
+    %\comment[CC]{à modifier dans le papier section 3.2}[(cc) done]
 	
-	% Also I appreciate you are trying to show rather complex results but reading the results several times I found the presentation of them (both written and visual) really hard to follow and understand. I was wondering if maybe you could find a better way to show / discuss them. Maybe a  worked example of how each set of parameters leads to a point in say Figure 4. Also it is confusing why the results from both models are not presented using the same styles of figures. For example, for the sugar scape model you different styles of figures than for the segregation model.   
+	% Also I appreciate you are trying to show rather complex results but reading the results several times I found the presentation of them (both written and visual) really hard to follow and understand. I was wondering if maybe you could find a better way to show / discuss them. Maybe a  worked example of how each set of parameters leads to a point in say Figure 4. Also it is confusing why the results from both models are not presented using the same styles of figures. For example, for the sugar scape model you different styles of figures than for the segregation model.
 	\item Additional figures for the Schelling model presenting the results in a similar way were provided and commented in a way that tries to make it easier to grasp for the reader. Unfortunately, the figures showing grid estimates of phase diagrams could not be realized for the Schelling model because of the different sampling of the parameter space used.
 
 \end{itemize}
@@ -280,10 +280,11 @@ Concerning the comments made by the fourth referee:
 	\item \comment[JR]{to the best of my knowledge there is no full-world morphological classification of cities (and surely because global 1km density dataset is not robust enough for that - already with the European grid it is not perfect)}[(MLT) Peut-être qu'on peut intégrer sa remarque dans la partie discussion? Je ne connais pas non plus de classification morphologique des villes à l'échelle du monde. Les cas européens sont privilégiés du fait de la disponibilité de données comme Corine Land Cover et Urban Atlas (pour l'usage du sol) ou Geostat (grilles de densité de pop de résolution 1km), mais ça doit aussi exister pour les US au moins? Il y a aussi le projet gridded population of the world de l'université de Columbia mais la résolution n'est pas assez fine (2.5 arcminute) pour une analyse de la morpho urbaine.]
 	
 	% Why do you not have the same amount of repetitions for your Sugarscape (50 repetitions) and Schelling (100 repetitions) model runs?
-	\item \comment[JR]{no justification for the difference in number of runs (just experimental setup contingence\ldots ) $\rightarrow$ either new runs or redo computations with 50 for Schelling}
+	\item \comment[JR]{no justification for the difference in number of runs (just experimental setup contingence\ldots ) $\rightarrow$ either new runs or redo computations with 50 for Schelling}\comment[JR]{ca va etre chaud patate pour les new computations ; je vais regarder les ratio de sharpe, avec un peu de chance il y a besoin de plus de repets pour schelling...}
 	
 	% You say your models are open source - do you give details of that source?  
-	\item Concerning the source code of the models, an open public repository was put into place and the link provided in the paper (to an anonymized version to ensure blind review).
+	\item Concerning the source code of the models, an open public repository was put into place and the link provided in the paper (to an anonymized version to ensure blind review). Similarly, the large simulation datasets used for results presented in the paper are openly available on a dataverse repository (provisorily anonymized also).
+	\comment[JR]{TODO dataverse. / statement open code and data}
 	
 	% Small edits:
 	% X line 68: "...a different system"
