--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,5 +1,50 @@
 
 
+
+
+@article{lilburne2009sensitivity,
+  title={Sensitivity analysis of spatial models},
+  author={Lilburne, Linda and Tarantola, Stefano},
+  journal={International Journal of Geographical Information Science},
+  volume={23},
+  number={2},
+  pages={151--168},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{raimbault2018urban,
+  title={An Urban Morphogenesis Model Capturing Interactions between Networks and Territories},
+  author={Raimbault, Juste},
+  journal={arXiv preprint arXiv:1805.05195},
+  year={2018}
+}
+
+
+@inproceedings{raimbault2018multi,
+  title={Multi-modeling the morphogenesis of transportation networks},
+  author={Raimbault, Juste},
+  booktitle={Artificial Life Conference Proceedings},
+  pages={382--383},
+  year={2018},
+  organization={MIT Press}
+}
+
+
+
+@article{liao2005clustering,
+  title={Clustering of time series data—a survey},
+  author={Liao, T Warren},
+  journal={Pattern recognition},
+  volume={38},
+  number={11},
+  pages={1857--1874},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
 @article{benenson2004geosimulation,
   title={Geosimulation: object-based modeling of urban phenomena},
   author={Benenson, Itzhak and Torrens, Paul M},
