--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -141,7 +141,7 @@ Concerning specifically the comments made by the first referee:
 	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
 	
 	\item In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty....), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most harmful one (e.g. the least realistic, although this is the case of most Schelling models).
-	\comment[CC]{Ref du papier de batty à ajouter (je ne l'ai pas trouvée}[(c'est le Batty, 2005)]
+	%\comment[CC]{Ref du papier de batty à ajouter (je ne l'ai pas trouvée}[(c'est le Batty, 2005)]
 	
 	
 	% 9. The authors should illustrate the contribution of each parameter of the generator to the generated initial pattern using a figure. Details of the generators should be included in an appendix
@@ -154,8 +154,8 @@ Concerning specifically the comments made by the first referee:
 	%\comment[CC]{argumentaire à ajouter dans le papier}[(cc)done]
 	
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
-	\item cf infra. 
-	\item density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
+	%\item cf infra. 
+	\item Density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
 %\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
 		
 	
@@ -189,7 +189,7 @@ Concerning the comments made by the second referee:
 
 	% Page 2 line 88: the authors state that “Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density”, I do not think this is true. Many models generate a heterogeneous synthetic population that is based on local data (replicating the actual population as closely as possible) and in far more detail then what is done in this paper. I am thinking of work in the line of disease diffusion, crime etc.
 	\item \comment[JR]{il a un point car ce sont des classes de modèles qu'on a pas trop cité ? par contre la sensibilite a ces distribs precises n'est pas testée, ou pas systeématiquement : il faut qu'on clarifie ou reformule}
-    \comment[MLT]{En fait, c'est là aussi une question de reformulation. Je crois qu'il faudrait répondre quelque chose comme : "We acknowledge the fact that many ABM applications use "real" data and spatial features for their simulations. However, as explained by (Thomas et al. 2017) in the case of LUTI models for instance, most simulations do not evaluate the impact of city delineations nor MAUP on the output of the models, which constitutes a potential limit in the interpretation of results.}
+    \comment[MLT]{En fait, c'est là aussi une question de reformulation. Je crois qu'il faudrait répondre quelque chose comme : "We acknowledge the fact that many ABM applications use "real" data and spatial features for their simulations. However, as explained by (Thomas et al. 2017) in the case of LUTI models for instance, most simulations do not evaluate the impact of city delineations nor MAUP on the output of the models, which constitutes a potential limit in the interpretation of results.}{(JR) ca me va comme reformulation}
 	
 	% Page 2 line 98: “However, this step is rarely explicit and authors tend to generalize the conclusion of the model from a single, spatial case study”. I do not understand the first part of the this statement. The steps taken are often very explicit. Due to the amount of time it takes to correctly represent all spatial data, including population densities and the variation of other population variables over space, many authors indeed restrict themselves to a single case study due to the time intensity of this task. Many agent-based models are also not valid for other areas.
 	\item \comment[JR]{idem la on parle pas exactement du meme type de modeles, mais son exemple prouve notre propos : le modele tourne sur une situation unique, et on teste pas l'effet de l'espace.}
@@ -204,13 +204,14 @@ Concerning the comments made by the second referee:
 	
 	% The most interesting part of the research to me, is not the way the density layers are generated but the use of the phase diagrams, defined as a vector of final aggregated model outputs. As these are vectors, they are not so different from time series and many techniques exist to compare vectors in this domain. I wonder if the Euclidean distance is the best measure to determine the difference between the phase vectors of different spatial inputs.
 	% -> 
-	\item The comment on other possible techniques to compare phase diagrams echoes one other reviewer comment, and we indeed expanded the discussion on this point, showing first that other distance do not change much qualitative results and with more literature for possible extensions. \comment[JR]{analyse à ajouter}
+	\item The comment on other possible techniques to compare phase diagrams echoes one other reviewer comment, and we indeed expanded the discussion on this point, showing first that other distance do not change much qualitative results and with more literature for possible extensions.
+	%\comment[JR]{analyse à ajouter}
 	
 	% Last paragraph of page 5, you do not state explicitly if genetic algorithms were use within the OpenMOLE platform.
 	\item The functionalities of OpenMOLE we used were detailed; we did not use genetic algorithms but sampling methods and high performance computing environments.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
-	\item \comment[JR]{ce qu'il suggère c'est un indice intégré sur l'ensemble des phases diagramme, donc un ``meta-meta-indice'' en quelque sorte, nous on reste à un niveau de meta seulement car on regarde juste pour chaque s'il bouge par rapport à un point de reference. En termes thematique c'est plus coherent pour nous, lui doit avoir en tete des indices de sensibilite globaux type Saltelli. $\rightarrow$ a voir comment justifier ca bien}
+	\item \comment[JR]{ce qu'il suggère c'est un indice intégré sur l'ensemble des phases diagramme, donc un ``meta-meta-indice'' en quelque sorte, nous on reste à un niveau de meta seulement car on regarde juste pour chaque s'il bouge par rapport à un point de reference. En termes thematique c'est plus coherent pour nous, lui doit avoir en tete des indices de sensibilite globaux type Saltelli. $\rightarrow$ a voir comment justifier ca bien}{(JR) inclure en mise en contexte ce lien avec les Saltelli et indexes globaux}
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
     
@@ -234,7 +235,7 @@ Concerning the comments made by the third referee:
     \comment[CC]{à faire en derniere relecture}
 	
 	% On a side note, one of your key words you use “validation” but in what sense?  You don’t really come back to this in the paper, also you write about “the validity of generative models is uncertain until their results are proven robust and representative of ’real-world’ conditions.” In the abstract but this is it.  What do you consider real world conditions to be? You seem to allude that you need to have the spatial generator to generate realistic (styles) city shapes for testing on the Schelling model but I am not convinced.  After the abstract all notion of validation is missing.
-	\item We have agreed with the reviewer and removed the concept of validation altogether, replacing it with model evaluation or sensitivity analysis.
+	\item We have agreed with the reviewer on ``validation'' and removed the concept of validation altogether, replacing it with model evaluation or sensitivity analysis.
     %\comment[JR]{enlever le concept de validation}
 	
 	% Geosimulation is introduced but not defined or referenced.  This should be clarified as the term has several meanings etc.
@@ -250,7 +251,7 @@ Concerning the comments made by the third referee:
 
 	% You write “To our knowledge there exist no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature.” As this is new you may want to discuss how say its done in other fields?  
 	\item 
-    \comment[JR]{cf remarques other reviewers sur ce point}[(MLT) Sa remarque fait sens, mais j'avoue ne pas être trop au point sur cette partie de la littérature... vous avez des références?]
+    \comment[JR]{cf remarques other reviewers sur ce point}[(MLT) Sa remarque fait sens, mais j'avoue ne pas être trop au point sur cette partie de la littérature... vous avez des références?][(JR)concernant la spatial sensitivity : justement c'est pas trop fait non plus dans les autres champs ! je parlais avec un ecologue, leur espace est jamais varié autre que donnees reelles ; j'ai l'impressions que geosciences, hydrologie etc idem. Pour comparer phase diagrams j'ai pas en tete de domaine ou ca se ferait (faute d'avoir cherché, justement quand on cherchait une methode) - le plus proche c'est les patterns comparison etc. comme l'on suggere les reviewers.]
 	
 	% In the Schelling and sugarscape models how are the initial population of agents distributed? Is it random? I ask as this is unclear in the current version of the paper but it is vital if your purpose is to explore how the initial spatial configuration impacts the results of the model. Should the agents not be all located at the same location for each run to rule out the impact of initial placement of agents on the resulting patterns? This is something that is not addressed in the paper. I know for example, the Schelling model in NetLogo normally places the agents at random locations but in your reimplementation how is this done? The same goes for the sugarscape model in NetLogo. I believe a clearer description of the model initialization would be good and how its not the initial random placement of agents but the actual environment that impacts the outcomes. Maybe this was explained in the paper but I missed it.  
 	\item Yes, classically, the initial distribution of agents is random in both models and, most importantly for our point, it follows a uniform distribution of density. In our implementation, the initial location of agents is also random in Schelling, but it follows a distribution of density given by the generated grid. In Sugarscape, the agents are initialised at random but the resources follow a distribution of density given by the generated grid. We have clarified this point in section 2.3
@@ -277,14 +278,15 @@ Concerning the comments made by the fourth referee:
 	\item We have not addressed the shape of cells and the uncertainty of data in this paper, only the diversity of shapes of urban morphologies (e.g. heterogeneity). 
 	
 	% Rigorous experimental method described. In the matching of European metropolitan areas to your generated outputs, I wonder what you are missing by not using cities from other continents. i.e. by widening the cities available to your study it may be possible to even better discover real-world examples of your archtypes (compact, polycentric, discontinuous).
-	\item \comment[JR]{to the best of my knowledge there is no full-world morphological classification of cities (and surely because global 1km density dataset is not robust enough for that - already with the European grid it is not perfect)}[(MLT) Peut-être qu'on peut intégrer sa remarque dans la partie discussion? Je ne connais pas non plus de classification morphologique des villes à l'échelle du monde. Les cas européens sont privilégiés du fait de la disponibilité de données comme Corine Land Cover et Urban Atlas (pour l'usage du sol) ou Geostat (grilles de densité de pop de résolution 1km), mais ça doit aussi exister pour les US au moins? Il y a aussi le projet gridded population of the world de l'université de Columbia mais la résolution n'est pas assez fine (2.5 arcminute) pour une analyse de la morpho urbaine.]
+	\item To the best of our knowledge, there does not exist a study of urban morphologies similar to the one we used but at a global scale (this should be linked to the absence of a raster of population with a resolution fine enough). Working on other regional systems of cities such as the US could be possible but remains out of the scope of this paper. We added this interesting suggestion to the discussion.
+	%\comment[JR]{to the best of my knowledge there is no full-world morphological classification of cities (and surely because global 1km density dataset is not robust enough for that - already with the European grid it is not perfect)}[(MLT) Peut-être qu'on peut intégrer sa remarque dans la partie discussion? Je ne connais pas non plus de classification morphologique des villes à l'échelle du monde. Les cas européens sont privilégiés du fait de la disponibilité de données comme Corine Land Cover et Urban Atlas (pour l'usage du sol) ou Geostat (grilles de densité de pop de résolution 1km), mais ça doit aussi exister pour les US au moins? Il y a aussi le projet gridded population of the world de l'université de Columbia mais la résolution n'est pas assez fine (2.5 arcminute) pour une analyse de la morpho urbaine.]
 	
 	% Why do you not have the same amount of repetitions for your Sugarscape (50 repetitions) and Schelling (100 repetitions) model runs?
 	\item \comment[JR]{no justification for the difference in number of runs (just experimental setup contingence\ldots ) $\rightarrow$ either new runs or redo computations with 50 for Schelling}\comment[JR]{ca va etre chaud patate pour les new computations ; je vais regarder les ratio de sharpe, avec un peu de chance il y a besoin de plus de repets pour schelling...}
 	
 	% You say your models are open source - do you give details of that source?  
 	\item Concerning the source code of the models, an open public repository was put into place and the link provided in the paper (to an anonymized version to ensure blind review). Similarly, the large simulation datasets used for results presented in the paper are openly available on a dataverse repository (provisorily anonymized also).
-	\comment[JR]{TODO dataverse. / statement open code and data}
+	%\comment[JR]{TODO dataverse. / statement open code and data}
 	
 	% Small edits:
 	% X line 68: "...a different system"
